# trading-bot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.cfg
bindings/: python_bindings.cpp
include/trading/: config.hpp  execution_engine.hpp  execution_report.hpp  limit_order_book.hpp  market_data_connector.hpp  new_order.hpp  order_state.hpp  risk_manager.hpp  symbol_worker.hpp  telemetry.hpp
src/: config.cpp  execution_engine.cpp  limit_order_book.cpp  main.cpp  market_data_connector.cpp  risk_manager.cpp  symbol_worker.cpp  telemetry.cpp
strategy/: config.py  log.py  main_strategy.py  order_calculator.py  pnl.py  print_utils.py  size_calc.py
tests/: test_config.cpp  test_execution_engine.cpp  test_limit_order_book.cpp  test_market_data_connector.cpp  test_risk_manager.cpp  test_telemetry.cpp
